<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/go_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:background="@drawable/click_ripple_not_backround"
        android:onClick="clickHomeButtonAbout"
        android:src="@drawable/ic_home3"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.08"
        tools:ignore="UsingOnClickInXml" />
    <TextView
        android:id="@+id/how_must_winner"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_must_winner"
        android:textColor="@color/textColor_800"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/go_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/image_winner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_must_winner"
        android:src="@drawable/how_win"/>
    <TextView
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/developer_by"
        app:layout_constraintTop_toBottomOf="@id/image_winner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/textColor_800"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/by"
        app:layout_constraintBottom_toTopOf="@id/text"
        />
    <TextView
        android:id="@+id/text"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/developer_by"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/textColor_200"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/n_n_gita_3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>